Prevent menu item clicks from collapsing menu.

--- a/src/components/DropDownArrow/_DropDownArrow.scss
+++ b/src/components/DropDownArrow/_DropDownArrow.scss
@@ -4,7 +4,7 @@ div.ArrowContainer {
   transform: scale(0.65);
   display: inline-block;
   position: relative;
-  margin-top: 15px;
+  margin-top: 14px;
   margin-left: auto;
   margin-right: 8px;
   margin-bottom: auto;
